--- a/page.css
+++ b/page.css
@@ -14,6 +14,7 @@
 body
 {
   background-color: #000000;
+
 }
 
 .galerie
@@ -27,10 +28,22 @@ body
 {
   height: 50vh;
   width: 33%;
+  color: #B99A3B;
+  font-family: 'librebaskerville';
+  font-size: 15px ;
+  font-style: italic;
+  font-weight: bold ;
 }
 
 .imageMarbre {
   background-image: url(Marbre-or-blanc.png);
+  text-align: center;
+  margin: 0 auto;
+}
+
+p
+{
+  width: 50%;
 }
 
 .rail
@@ -57,12 +70,7 @@ body
 
 
 /* .carré2
-{
-  color: #B99A3B;
-  font-family: 'librebaskerville';
-  font-size: 20px ;
-  font-style: italic;
-  font-weight: bold ; */
+
   /* height: 243px;
   left: 666px; */
   /* letter-spacing: 0;
