création index 3 et 4

--- a/page.css
+++ b/page.css
@@ -86,3 +86,25 @@ body
   height:65%;
   opacity: 0.97;
 }
+
+.index3
+{
+  background-color: black;
+  position:absolute;
+  top: 175px;
+  left: 315px;
+  width: 70%;
+  height:65%;
+  opacity: 0.97;
+}
+
+.index4
+{
+  background-color: black;
+  position:absolute;
+  top: 175px;
+  left: 315px;
+  width: 70%;
+  height:65%;
+  opacity: 0.97;
+}
