--- a/page.css
+++ b/page.css
@@ -79,6 +79,13 @@ body
 .gold {
   color: #B99A3B;
 }
+.cross
+{  
+  position: absolute;
+  top: 0.8%;
+  right: 0.4%;
+  margin: 0;
+}
 .animtxt
 {
   position: relative;
@@ -307,6 +314,7 @@ from {
       transform: translateY(330px) translateX(-40px);
     }
  }
+
  /*-----PAGE "PROJETS"-----
 ------------------------*/
 .projets
@@ -335,31 +343,27 @@ from {
 }
 .capture1
 {
-  width: 750px;
-  height: 450px;
+  width: 95%;
+  height: 60%;
   outline: solid 2px #E6E5E2;
+  margin-left:2%;
 }
 .capture1:active
 {
-  -ms-transform: scale(2.1); /* IE 9 */
-  -webkit-transform: scale(2.1); /* Safari 3-8 */
-  transform: scale(2.1);
-  transition: transform 3s ;
-  transform: translateY(-20px) translateX(385px) scale(2.1);
+  transition: transform 2s ;
+  transform: translateY(-30px) translateX(387px) scale(2.05);
 }
 .capture2
 {
-  width: 750px;
-  height: 450px;
+  width: 95%;
+  height: 60%;
   outline: solid 2px #E6E5E2;
+  margin-left: 2%;
 }
 .capture2:active
 {
-  -ms-transform: scale(2.1); /* IE 9 */
-  -webkit-transform: scale(2.1); /* Safari 3-8 */
-  transform: scale(2.1);
-  transition: transform 3s ;
-  transform: translateY(-20px) translateX(-385px) scale(2.1);
+  transition: transform 2s ;
+  transform: translateY(-30px) translateX(-381px) scale(2.05);
 }
 /* fin page "projet" 
 -------------------*/
