--- a/page.css
+++ b/page.css
@@ -14,6 +14,7 @@
 :root {
     font-size: 18px;
 }
+
 body {
     background-color: #000000;
     margin: auto;
@@ -22,6 +23,7 @@ body {
     font-weight: bold;
     overflow: hidden;
 }
+
 .galerie {
     display: flex;
     flex-wrap: wrap;
@@ -43,7 +45,7 @@ body {
     cursor: pointer;
 }
 
-.modal {
+.popup {
     position: fixed;
     left: 0;
     top: 0;
@@ -55,29 +57,37 @@ body {
     transform: scale(1.1);
     transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
-.modal-content {
+
+.Popup-content {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: black;
     padding: 1rem 1.5rem;
-    width: 24rem;
+    width: 75%;
+    height: 75%;
     border-radius: 0.5rem;
+    z-index: 2;
 }
+
+.projects
+{
+    width: 600px;
+    height: 300px;
+}
+
 .close-button {
     float: right;
-    width: 1.5rem;
-    line-height: 1.5rem;
-    text-align: center;
     cursor: pointer;
-    border-radius: 0.25rem;
-    background-color: lightgray;
+    border-radius: 5px;
 }
+
 .close-button:hover {
-    background-color: darkgray;
+    transform: scale(1.10);
 }
-.show-modal {
+
+.show-popup {
     opacity: 1;
     visibility: visible;
     transform: scale(1.0);
@@ -127,7 +137,7 @@ body {
     top: -330px;
     right: -40px;
     position: relative;
-    z-index: 0;
+    z-index: -1;
     animation: animtxt 3s ease-in-out both;
     animation-delay: 1s;
 }
@@ -228,100 +238,94 @@ body {
     }
 }
 
-/*-----PAGE "PROJETS"-----
-------------------------*/
-.projets {
-    display: flex;
-    background-color: black;
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
-    opacity: 0.97;
-}
+/*!*-----PAGE "PROJETS"-----*/
+/*------------------------*!*/
+/*.projets {*/
+/*    display: flex;*/
+/*    background-color: black;*/
+/*    position: absolute;*/
+/*    top: 10%;*/
+/*    left: 10%;*/
+/*    width: 80%;*/
+/*    height: 80%;*/
+/*    opacity: 0.97;*/
+/*}*/
 
-.h2site {
-    font-size: 1.5rem;
-    color: #B99A3B;
-    text-align: center;
-    margin: 10% 0% 5% 0%;
-}
+/*.h2site {*/
+/*    font-size: 1.5rem;*/
+/*    color: #B99A3B;*/
+/*    text-align: center;*/
+/*    margin: 10% 0% 5% 0%;*/
+/*}*/
 
-.h2cv {
-    font-size: 1.5rem;
-    color: #B99A3B;
-    text-align: center;
-    margin: 10% 0% 5% 0%;
-}
+/*.h2cv {*/
+/*    font-size: 1.5rem;*/
+/*    color: #B99A3B;*/
+/*    text-align: center;*/
+/*    margin: 10% 0% 5% 0%;*/
+/*}*/
 
-.capture1 {
-    width: 98%;
-    max-width: 100%;
-    height: auto;
-    outline: solid 2px #E6E5E2;
-    margin-left: 1%;
-}
+/*.capture1 {*/
+/*    width: 98%;*/
+/*    max-width: 100%;*/
+/*    height: auto;*/
+/*    outline: solid 2px #E6E5E2;*/
+/*    margin-left: 1%;*/
+/*}*/
 
-.capture1:active {
-    transition: transform 2s;
-    transform: translateY(-30px) translateX(387px) scale(2.05);
-}
+/*.capture1:active {*/
+/*    transition: transform 2s;*/
+/*    transform: translateY(-30px) translateX(387px) scale(2.05);*/
+/*}*/
 
-.capture2 {
-    width: 98%;
-    max-width: 100%;
-    height: auto;
-    outline: solid 2px #E6E5E2;
-    margin-left: 1%;
-}
+/*.capture2 {*/
+/*    width: 98%;*/
+/*    max-width: 100%;*/
+/*    height: auto;*/
+/*    outline: solid 2px #E6E5E2;*/
+/*    margin-left: 1%;*/
+/*}*/
 
-.capture2:active {
-    transition: transform 2s;
-    transform: translateY(-30px) translateX(-381px) scale(2.05);
-}
+/*.capture2:active {*/
+/*    transition: transform 2s;*/
+/*    transform: translateY(-30px) translateX(-381px) scale(2.05);*/
+/*}*/
 
-/* fin page "projet"
--------------------*/
-/* PAGE "Developpement" 
----------------------*/
-.developpementweb {
-    display: flex;
-    background-color: black;
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
-    opacity: 0.97;
-}
+/*!* fin page "projet"*/
+/*-------------------*!*/
+/*!* PAGE "Developpement" */
+/*---------------------*!*/
+/*.developpementweb {*/
+/*    display: flex;*/
+/*    background-color: black;*/
+/*    position: absolute;*/
+/*    top: 10%;*/
+/*    left: 10%;*/
+/*    width: 80%;*/
+/*    height: 80%;*/
+/*    opacity: 0.97;*/
+/*}*/
 
-/* fin page "Developpement"
--------------------------*/
-/* PAGE "loisirs" 
----------------*/
-.loisirs {
-    display: flex;
-    background-color: black;
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
-    opacity: 0.97;
-}
+/*!* fin page "Developpement"*/
+/*-------------------------*!*/
+/*!* PAGE "loisirs" */
+/*---------------*!*/
+/*.loisirs {*/
+/*    display: flex;*/
+/*    background-color: black;*/
+/*    position: absolute;*/
+/*    top: 10%;*/
+/*    left: 10%;*/
+/*    width: 80%;*/
+/*    height: 80%;*/
+/*    opacity: 0.97;*/
+/*}*/
 
-/* fin page "loisirs"
--------------------*/
+/*!* fin page "loisirs"*/
 /*----"RESPONSIVE"-- 
 ------------------*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
     :root {
         font-size: 15px;
-    }
-
-    .projets {
-        flex-direction: column;
-        text-align: center;
     }
 }
